--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -144,6 +144,16 @@ This is due to the transversal holes and the vibration effects when the pipe is 
 mounted. By the way, it is always better to have a longuer pipe, since we can reduce it
 with a lime for tuning until it reaches the correct frequency.
 
+\subsection{Drilling the pipes}
+TODO
+
+\subsection{Checking the frequence}
+TODO
+\begin{itemize}
+  \item video of xanalyzer -rate 16000
+  \item recording audio files
+\end{itemize}
+
 %%
 \newpage
 \section{Assembling}
