[fix] radius of gyration formula

--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -65,8 +65,8 @@ where:
   \item $d$ the cylinder diameter in $mm$.
 \end{itemize}
 However, we found an apparently better formula in [tamhigh\_xylo]
-which accounts for the pipe radius of gyration. The nth transveral frequency is
-given by:
+which accounts for the pipe radius of gyration. The nth transveral
+frequency is given by:
 \begin{center}
   \framebox[3in][c]{$ f_{n} = \frac{\pi v k}{8l^2} m^2 $}
 \end{center}
@@ -84,14 +84,14 @@ where:
       \item $m = 2(n + 1)$ otherwise.
     \end{itemize}
 \end{itemize}
-For a cylinder, the gyration of radius is:
+For a tube, the radius of gyration is:
 \begin{center}
-  \framebox[3in][c]{$ k = \frac{1}{2} \sqrt{i^2 + o^2} $}
+  \framebox[3in][c]{$ k = \frac{1}{2} \sqrt{R^2 + r^2} $}
 \end{center}
 where:
 \begin{itemize}
-  \item $i$ the inner diameter in $mm$,
-  \item $o$ the outter diameter in $mm$.
+  \item $R$ the outter radius in $mm$.
+  \item $r$ the inner radius in $mm$,
 \end{itemize}
 The copper sound propagation speed is:
 \begin{center}
@@ -100,8 +100,8 @@ The copper sound propagation speed is:
 
 \paragraph{} Since we want the whole device small, we keep the pipe as short
 as possible. However, we want to build it using relatively inaccurate
-drilling and cutting tools. Thus, we ended up choosing the 8th frequency mode,
-which results in the folloing table:
+drilling and cutting tools. Thus, we ended up choosing the 8th frequency mode
+(ie. the DO note frequency is 2093 hz), which results in the following table:
 \begin{center}
   \begin{tabular}{|c|c|c|c|}
     \hline
