[update] latex, add related projects section

--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -201,6 +201,15 @@ percing  he pipe holes.
 
 %%
 \newpage
+\section{Related projects}
+\begin{itemize}
+\item http://www.robovibes.com/home
+\item http://www.logosfoundation.org/instrum\_gwr/vibi.html
+\item http://www.nerdkits.com/videos/robotic\_xylophone
+\end{itemize}
+
+%%
+\newpage
 \section{References}
 \begin{itemize}
 \item wiki\_acous\_reson: http://en.wikipedia.org/wiki/Acoustic\_resonance
